--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -242,7 +242,7 @@ body, html {
     <!-- Sekcja związana z dowodem -->
     <main>
         <section id="lew">
-            <img src="https://imgur.com/mkmgqnf" class="object-contain w-full rounded-lg photo" style="margin: 0;" alt="Zdjęcie nieprawidłowe!">
+            <img src="https://imgur.com/mkmgqnf.jpg" class="object-contain w-full rounded-lg photo" style="margin: 0;" alt="Zdjęcie nieprawidłowe!">
 
             <img class="photo-border" src="border.png" alt="">
             <div id="gradient"></div>
