--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -260,7 +260,7 @@ body, html {
         <section id="praw">
             <div class="cwel">
                 <span class="title">
-                    Przemysław
+                    PRZEMYSLAW
                 </span>
                 <span class="description">
                     Imię (imiona)
@@ -268,7 +268,7 @@ body, html {
             </div>
             <div class="cwel">
                 <span class="title">
-                    Żarkowski
+                    ŻĄRKOWSKI
                 </span>
                 <span class="description">
                     Nazwisko
