--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -260,7 +260,7 @@ body, html {
         <section id="praw">
             <div class="cwel">
                 <span class="title">
-                    PRZEMYSLAW
+                    PRZEMYSŁAW
                 </span>
                 <span class="description">
                     Imię (imiona)
@@ -268,7 +268,7 @@ body, html {
             </div>
             <div class="cwel">
                 <span class="title">
-                    ŻĄRKOWSKI
+                    ŻARKOWSKI
                 </span>
                 <span class="description">
                     Nazwisko
@@ -300,7 +300,7 @@ body, html {
 </div>
             <div class="cwel">
                 <span class="title">
-                  Akademia Leona Koźmińskiego w Warszawie    
+                  AKADEMIA LEONA KOŹMIŃSKIEGO W WARSZAWIE   
                 </span>
                 <span class="description">
                     Nazwa Uczelni
