--- a/blankc2.fun/japidi/dowodnew/dowodnowy.html
+++ b/blankc2.fun/japidi/dowodnew/dowodnowy.html
@@ -243,7 +243,7 @@ body, html {
     <!-- Sekcja związana z dowodem -->
     <main>
         <section id="lew">
-            <img src="https://imgur.com/mkmgqnf" class="object-contain w-full rounded-lg photo" style="margin: 0;" alt="Zdjęcie nieprawidłowe!">
+            <img src="https://imgur.com/mkmgqnf.jpg" class="object-contain w-full rounded-lg photo" style="margin: 0;" alt="Zdjęcie nieprawidłowe!">
 
             <img class="photo-border" src="border.png" alt="">
             <div id="gradient"></div>
@@ -277,7 +277,7 @@ body, html {
         <section id="praw">
             <div class="cwel">
                 <span class="title">
-                    Przemysław
+                    PRZEMYSŁAW	
                 </span>
                 <span class="description">
                     Imię (imiona)
@@ -285,7 +285,7 @@ body, html {
             </div>
             <div class="cwel">
                 <span class="title">
-                    Żarkowski
+                    ŻARKOWSKI
                 </span>
                 <span class="description">
                     Nazwisko
@@ -293,7 +293,7 @@ body, html {
             </div>
             <div class="cwel">
                 <span class="title">
-                    Polskie
+                    POLSKIE
                 </span>
                 <span class="description">
                     Obywatelstwo
@@ -352,33 +352,33 @@ body, html {
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwisko rodowe</p>
-                <p class="main">Żarkowski</p>
+                <p class="main">ŻARKOWSKI</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Płeć</p>
-                <p class="main">Mężczyzna</p>
+                <p class="main">MĘŻCZYZNA</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwisko rodowe ojca</p>
-                <p class="main">Żarkowski</p>
+                <p class="main">ŻARKOWSKI</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwisko rodowe matki</p>
-                <p class="main">Abucemicz</p>
+                <p class="main">ABUCEWICZ</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Miejsce urodzenia</p>
-                <p class="main">Elbląg</p>
+                <p class="main">ELBLĄG</p>
             </section>
             <p class="krecha"></p>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Adres zameldowania na pobyt stały</p>
-                <p class="main">Morszńska 3/1<br>82-300 Elbląg</p>
+                <p class="main">MORSZYŃSKA 3/1<br>82-300 ELBLĄG</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
@@ -517,7 +517,7 @@ body, html {
                         <p class="krecha2"></p>
                         <section class="dana">
                             <p class="info">Imię ojcа</p>
-                            <p class="main">MARIAN</p>
+                            <p class="main">JACEK</p>
                         </section>
                         <p class="krecha2"></p>
                         <section class4="dana">
