--- a/blankc2.fun/japidi/dowodnew/home.html
+++ b/blankc2.fun/japidi/dowodnew/home.html
@@ -422,7 +422,7 @@ header {
 
                     <div class="Home_service__yPHMD" onclick="window.location.href='home.html'">
                         <div class="Home_serviceBox__UBneT">
-                            <img src="https://imgur.com/RNvnneR" alt="ID" width="30" height="30">
+                            <img src="https://imgur.com/RNvnneR.jpg" alt="ID" width="30" height="30">
                         </div>
                         <p>Alert<br>powodziowy</p>
                     </div>
