--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -394,7 +394,7 @@ body, html {
 	    <p class="info">kolejowym i autobusowym publicznym transportem zbiorowym (do 26. roku życia)</p>
 
         </div>
-        <img src="https://imgur.com/eYyL7EA.jpg" alt="Ikona" class="znizki-ikona" />
+        <img src="iznak.png" alt="Ikona" class="znizki-ikona" />
     </a>
 
 
