--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -389,9 +389,10 @@ body, html {
 
 <a class="buto" style="cursor: pointer; display: flex; align-items: center; padding: 65px 40px ; border-radius: 10px; background-color: #E7F2FF; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);">
         <div>
-            <p class="main">Legitymacja uprawnia do zniżek na przejazdy:</p>
-            <p class="info">komunikacją miejską (50%)</p>	
-	    <p class="info">kolejowym i autobusowym publicznym transportem zbiorowym (do 26. roku życia)</p>
+            <p class="main">Legitymacja uprawnia do zniżek</p>
+			<p class="main">na przejazdy:</p>
+            <p class="info"><li>komunikacją miejską (50%),</p>	
+	    <p class="info"><li>kolejowym i autobusowym publicznym transportem zbiorowym (do 26. roku życia).</p>
 
         </div>
         <img src="iznak.png" alt="Ikona" class="znizki-ikona" />
