--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -251,7 +251,7 @@ body, html {
             <div id="rzecz" style="margin: 0; margin-top: 10px;">
 <div id="niggson"></div>
 <video id="godlo" autoplay loop muted>
-                    <source src="111.mov" type="video/quicktime">
+                    <source src="111.webm" type="video/webm">
                     Twoje urządzenie nie wspiera wideo.
                 </video>
             </body>
@@ -316,7 +316,7 @@ body, html {
         <section id="praw">
             <div class="cwel">
                 <span class="title">
-                    PRZEMYSŁAWv9
+                    PRZEMYSŁAWv10
                 </span>
                 <span class="description">
                     Imię (imiona)
