--- a/blankc2.fun/japidi/dowodnew/dowodnowy.html
+++ b/blankc2.fun/japidi/dowodnew/dowodnowy.html
@@ -5,7 +5,6 @@
 <html lang="PL-pl"></html>
 
 
-<!-- Mirrored from blankc2.fun/japidi/dowodnew/dowodnowy.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Dec 2024 20:49:06 GMT -->
 <head>
 
     <!-- Metadane -->
@@ -231,7 +230,7 @@ body, html {
 <body class="">   
     <header>
         <a href="home.html">
-            <img src="https://blankc2.fun/japidi/pozdro.svg" alt="leftarrow">
+            <img src="pozdro.svg" alt="leftarrow">
         </a>
         <span style="font-family: 'Inter'; font-weight: 900; position: relative; left: -6%;">mDowód</span>
         <img style="width: 25px; height: 25px;" src="madziamojakotka123.svg" alt="">
@@ -524,7 +523,6 @@ body, html {
 
 </body>
 
-<!-- Mirrored from blankc2.fun/japidi/dowodnew/dowodnowy.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Dec 2024 20:49:11 GMT -->
 </html>
 
 <!-- Aplikacja jest wykonana w celach edukacyjnych. Nie odpowiadamy za to jak jest uzywana! -->
