--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -229,7 +229,7 @@ body, html {
 <body class="">   
     <header>
         <a href="home.html">
-            <img src="https://blankc2.fun/japidi/pozdro.svg" alt="leftarrow">
+            <img src="pozdro.svg" alt="leftarrow">
         </a>
         <span style="font-family: 'Inter'; font-weight: 900; position: relative; left: -6%;">Legitymacja studencka</span>
         <img style="width: 25px; height: 25px;" src="madziamojakotka123.svg" alt="">
