--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -315,7 +315,7 @@ body, html {
         <section id="praw">
             <div class="cwel">
                 <span class="title">
-                    PRZEMYSŁAWv17
+                    PRZEMYSŁAWv18
                 </span>
                 <span class="description">
                     Imię (imiona)
@@ -424,7 +424,7 @@ body, html {
         // Ukrycie modala po 5 sekundach
         setTimeout(() => {
             modal.style.display = 'none'; // Ukrycie modala
-        }, 5000); // 5000 ms = 5 sekund
+        }, 3000); // 5000 ms = 5 sekund
     });
 </script>
 
@@ -447,8 +447,8 @@ body, html {
             <p class="main">Legitymacja uprawnia do zniżek</p>
 			<p class="main">na przejazdy:</p>
             <p class="info"><li>komunikacją miejską (50%),</p>	
-	    <p class="info"><li>kolejowym i autobusowym publicznym transportem zbiorowym (do 26. roku życia).</p>
-
+	    <p class="info"><li>kolejowym i autobusowym publicznym .</p>
+         <p class="info"><p>transportem zbiorowym (do 26. roku życia).</p>
         </div>
         <img src="iznak.png" alt="Ikona" class="znizki-ikona" />
     </a>
