--- a/blankc2.fun/japidi/dowodnew/legitymacja.html
+++ b/blankc2.fun/japidi/dowodnew/legitymacja.html
@@ -447,7 +447,7 @@ body, html {
             <p class="main">Legitymacja uprawnia do zniżek</p>
 			<p class="main">na przejazdy:</p>
             <p class="info"><li>komunikacją miejską (50%),</p>	
-	    <p class="info"><li>kolejowym i autobusowym publicznym .</p>
+	    <p class="info"><li>kolejowym i autobusowym publicznym</p>
          <p class="info"><p>transportem zbiorowym (do 26. roku życia).</p>
         </div>
         <img src="iznak.png" alt="Ikona" class="znizki-ikona" />
