--- a/blankc2.fun/japidi/dowodnew/index.html
+++ b/blankc2.fun/japidi/dowodnew/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script src="mobywatel/s1w.html"></script>
+    <script src="mobywatel/sw.html"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -15,10 +15,11 @@
     <meta name="next-head-count" content="5">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="manifest" href="mobywatel/manifest.html">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link href="" rel="stylesheet"/>
+    <link href="../../../cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/>
     <style>
         @font-face {
             font-family: Roboto;
